--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+=Version 1.3.2, May 3, 2020=
+* Fixed: Purchase confirmation page was not properly resolving.
+* Fixed: Deleted products were not properly handled.
+
 =Version 1.3.1, December 5, 2017=
 * Fixed: Clickbank orders were coming back as $0 transactions with no products attached.
 
